Fix end-note z-index

--- a/src/sass/common/footer.scss
+++ b/src/sass/common/footer.scss
@@ -90,6 +90,7 @@
         font-size: $FONT_SIZE_XS;
         position: fixed;
         bottom: 0;
+        z-index: 10;
         width: 100%;
         a {
             color: $COLOR_WHITE;
